--- a/local_shell/Makefile
+++ b/local_shell/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: jeunjeon <jeunjeon@student.42seoul.kr>     +#+  +:+       +#+         #
+#    By: seungcoh <seungcoh@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/19 14:19:40 by jeunjeon          #+#    #+#              #
-#    Updated: 2022/03/02 21:03:23 by jeunjeon         ###   ########.fr        #
+#    Updated: 2022/03/03 10:51:13 by seungcoh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -45,7 +45,6 @@ SRCS_NAME			=	main.c \
 						exe_cmd.c \
 						w_utility.c \
 						redirect_utility.c \
-						fd_copy.c \
 						ft_wildcard.c
 
 SRCS_PATH			=	./srcs
