--- a/local_shell/Makefile
+++ b/local_shell/Makefile
@@ -6,7 +6,7 @@
 #    By: seungcoh <seungcoh@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/19 14:19:40 by jeunjeon          #+#    #+#              #
-#    Updated: 2022/03/03 10:51:13 by seungcoh         ###   ########.fr        #
+#    Updated: 2022/03/03 12:48:23 by seungcoh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -45,7 +45,9 @@ SRCS_NAME			=	main.c \
 						exe_cmd.c \
 						w_utility.c \
 						redirect_utility.c \
-						ft_wildcard.c
+						ft_wildcard.c\
+						ft_wildcard2.c\
+						ft_wildcard3.c
 
 SRCS_PATH			=	./srcs
 SRCS				=	$(addprefix $(SRCS_PATH)/, $(SRCS_NAME))
